# atmospheric_reentry

./: .gitignore  README.md  pyproject.toml
src/: main.py  monte_carlo_run.py
src/atmospheric_reentry/: __init__.py  compute_geopotential_on_ml.py  get_winddata.py  logging.py  simulate_rocket.py  utils.py
src/atmospheric_reentry/windmodel_data/: era5_ml.grib  era5_reentry.grib  era5_reentry.nc  z_out.grib  zlnsp_ml.grib
src/tools/: constants.py  get_winddata.py  logging.py  simulate_rocket.py  state_estimation.py  time.py  utils.py  windfield.py
