[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atmospheric-reentry"
version = "0.1.0"
description = "Rocket reentry simulation toolkit"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name="jonaszubindu", email="64218380+jonaszubindu@users.noreply.github.com" }
]

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "xarray",
    "cfgrib",
    "pymap3d",
    "joblib"
]
[project.optional-dependencies]
dev = ["pytest"]
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
