[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atmospheric-reentry"
version = "0.1.0"
description = "Rocket reentry simulation toolkit"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name="jonaszubindu", email="64218380+jonaszubindu@users.noreply.github.com" }
]

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "xarray",
    "cfgrib",
    "pymap3d",
    "joblib"
]
[project.optional-dependencies]
dev = ["pytest", "mypy", "ruff"]
# Aeronautical basemap behind the ground-track plot (plot_results basemap=True)
basemap = ["contextily", "pyproj"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
# Check against the project's minimum Python so PEP 604 unions (X | None)
# are accepted rather than flagged as syntax errors.
python_version = "3.10"
ignore_missing_imports = true
# Vendored ECMWF utility (imported verbatim); not our code to type-check.
exclude = "compute_geopotential_on_ml\\.py"
